// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Component <Button> changes output after first click 1`] = `
<DocumentFragment>
  <button
    class="kth-button primary"
    type="button"
  >
    This is a message
  </button>
  <p>
    Knappen fungerar!
  </p>
</DocumentFragment>
`;

exports[`Component <Button> creates a button 1`] = `
<DocumentFragment>
  <button
    class="kth-button primary"
    type="button"
  >
    This is a message
  </button>
</DocumentFragment>
`;
